# ai-intelligence-system

./: .env.example  .gitignore  README.md  index.html  main.py  pyproject.toml
apps/meal-picker/: index.html
games/: snake.html
prompts/: analyze_prompt.txt
scripts/: analyze_news.py  fetch_news.py  generate_report.py  run_daily_digest.py
src/ai_intelligence/: __init__.py  app.py  config.py  kernel.py  schemas.py
src/ai_intelligence/analysis/: __init__.py  themes.py  trends.py
src/ai_intelligence/domain/: __init__.py  meals.py  models.py
src/ai_intelligence/memory/: __init__.py  working_memory.py
src/ai_intelligence/news/: __init__.py  fetcher.py  sources.py
src/ai_intelligence/pipelines/: __init__.py  daily_digest.py
src/ai_intelligence/providers/: __init__.py  llm.py
src/ai_intelligence/reports/: __init__.py  daily.py  markdown.py
src/ai_intelligence/storage/: __init__.py  markdown_store.py
src/ai_intelligence/tools/: __init__.py  registry.py  safe_math.py
tests/: test_daily_digest_smoke.py  test_meals.py
